<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.fouadaha.astralis.core.presentation.views.ErrorAppView">

    <ImageView
        android:id="@+id/image_error"
        android:layout_width="@dimen/image_size_extra_extra_extra_high"
        android:layout_height="@dimen/image_size_extra_extra_extra_high"
        android:layout_marginTop="@dimen/margin_extra_high"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/title_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/title_error"
        android:textSize="@dimen/font_size_extra_high"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/description_error"
        android:textSize="@dimen/font_size_high"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_retry_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button_retry"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/font_size_high" />
</LinearLayout>